# jelly-packages

./: LICENSE  README.md  publish.sh
jelly-executor/: Cargo.toml  README.md
jelly-executor/src/: context.rs  error.rs  lib.rs  test.rs
jelly-model/: Cargo.toml  README.md  rust-toolchain.toml
jelly-model/src/: lib.rs
jelly-model/src/common/: check.rs  hash.rs  mod.rs
jelly-model/src/model/: check.rs  combined.rs  common.rs  components.rs  mod.rs  node.rs
jelly-model/src/model/check/: check_afflux.rs  check_circular.rs  check_empty.rs  check_id.rs  check_inlets.rs  check_names.rs  check_output.rs  check_single.rs  checked.rs  test.rs
jelly-model/src/model/common/: api.rs  call_trigger.rs  code.rs  color.rs  error.rs  identity.rs  lets.rs  refer.rs  to_typescript.rs  trigger.rs  types.rs  validate.rs  values.rs  wallet.rs
jelly-model/src/model/common/api/: evm.rs  ic.rs
jelly-model/src/model/common/api/ic/: candid.rs
jelly-model/src/model/common/wallet/: evm.rs  ic.rs
jelly-model/src/model/components/: call.rs  code.rs  combined.rs  condition.rs  constant.rs  form.rs  identity.rs  interaction.rs  loops.rs  output.rs  param.rs  view.rs
jelly-model/src/model/components/call/: evm.rs  http.rs  ic.rs
jelly-model/src/model/components/call/evm/: action.rs
jelly-model/src/model/components/call/evm/action/: call.rs  deploy.rs  transaction.rs  transfer.rs
jelly-model/src/model/components/call/evm/action/call/: arg.rs  ret.rs
jelly-model/src/model/components/call/evm/action/deploy/: initial.rs
jelly-model/src/model/components/call/http/: body.rs  method.rs  way.rs
jelly-model/src/model/components/call/ic/: action.rs
jelly-model/src/model/components/call/ic/action/: call.rs
jelly-model/src/model/components/call/ic/action/call/: arg.rs  info.rs  (+1 more)
jelly-model/src/model/components/condition/: array.rs  bool.rs  number.rs  object.rs  text.rs
jelly-model/src/model/components/identity/: evm.rs  http.rs  ic.rs
jelly-model/src/model/components/interaction/: choose.rs  choose_form.rs  choose_full.rs  choose_tip.rs  frame.rs
jelly-model/src/model/components/interaction/choose_full/: form.rs
jelly-model/src/model/components/view/: array.rs  bool.rs  html.rs  image.rs  object.rs  table.rs  text.rs
jelly-model/src/model/components/view/inner/: array.rs  bool.rs  html.rs  image.rs  mod.rs  object.rs  table.rs  text.rs
jelly-model/src/model/node/: template.rs  validate.rs
jelly-model/src/model/node/validate/: array.rs  boolean.rs  evm_address.rs  hex.rs  image.rs  integer.rs  number.rs  object.rs  principal.rs  text.rs
jelly-model/src/model/types/: check.rs  evm.rs  mod.rs
jelly-model/src/model/types/abi/: mod.rs  types.rs
jelly-model/src/store/: mod.rs
jelly-model/src/store/api/: anchor.rs  content.rs  mod.rs
jelly-model/src/store/api/content/: evm.rs  ic.rs
jelly-model/src/store/code/: anchor.rs  item.rs  mod.rs
jelly-model/src/store/code/item/: args.rs  types.rs
jelly-model/src/store/combined/: anchor.rs  mod.rs
jelly-model/src/store/dapp/: access.rs  anchor.rs  category.rs  info.rs  mod.rs
jelly-model/src/store/dapp/access/: chain.rs  chain_identity.rs  duration.rs  nft_owner.rs  token_balance.rs
jelly-model/src/store/publisher/: anchor.rs  mod.rs
jelly-model/src/types/: chain.rs  identity.rs  mod.rs  time.rs
jelly-wasm/: Cargo.toml  build.sh  publish.sh  rust-toolchain.toml
jelly-wasm/src/: lib.rs  test.rs
(+171 files in other folders)
